🐛 Fixed right message but author name left aligned

--- a/src/partials/views/_chatroom.sass
+++ b/src/partials/views/_chatroom.sass
@@ -160,6 +160,11 @@
     margin-left : 0
     align-items : flex-end
 
+/** Author */
+.ts.chatroom > .content .right.message > .author
+    padding-right: calc((#{$chatroom_avatarSizeCalc}) + #{$chatroom_messageArrowDistance} + #{$chatroom_messageArrowSize})
+    text-align   : right
+    
 /** Content with avatar */
 .ts.chatroom > .content .right.message .avatar + .content
     margin-right: $chatroom_messageDistance
