--- a/test/tocas.css
+++ b/test/tocas.css
@@ -11509,6 +11509,11 @@ img.ts.bordered.image {
   margin-left: 0;
   align-items: flex-end; }
 
+/** Author */
+.ts.chatroom > .content .right.message > .author {
+  padding-right: calc((1.3em + 0.58em * 2 + 1px * 2) + 6px + 7px);
+  text-align: right; }
+
 /** Content with avatar */
 .ts.chatroom > .content .right.message .avatar + .content {
   margin-right: 0.8em; }
